corriendo
funciones funcionando, solcuion al openapi-generation
