# source/back-end/app.js
@@ -4,45 +4,50 @@ const mongoose = require('mongoose');
 const mongo = require("./mongodb");
 const controller = require('./controller');
 
+async function main() {
+    try {
+        // Get global variables from .env file
+        require("dotenv").config({path: path.resolve(__dirname, ".env")});
 
-async function main(){
-   
-    // Get global variables from .env file
-    require("dotenv").config({path: path.resolve(__dirname,".env")});
+        // Connect to database
+        const { create_connection } = require("./mongodb");
+        await create_connection();    
 
-    // Connect to database
-    const { create_connection } = require("./mongodb");
-    await create_connection();    
-    
-    // Crear una instancia de la aplicación Express
-    const app = express();
+        // Crear una instancia de la aplicación Express
+        const app = express();
 
+        // Iniciar el servidor Express
+        const PORT = process.env.PORT || 3000;
+        app.listen(PORT, () => {
+            console.log(`Servidor Express en funcionamiento en el puerto ${PORT}`);
+        });
 
-    /**esto me daba error por el cors
-     * app.use(cors({
-        origin: 'https://frontend-88.1fns2dopbijw.us-east.codeengine.appdomain.cloud'
-      }));
-*/
+        app.use(express.json()); // Middleware para parsear el cuerpo de las solicitudes como JSON
 
-    // Iniciar el servidor Express
-    const PORT = process.env.PORT || 3000;
-    app.listen(PORT, () => {
-        console.log(`Servidor Express en funcionamiento en el puerto ${PORT}`);
-    });
+        // Ruta GET para la página de inicio
+        app.get('/', controller.inicio);
 
-    app.get('/', controller.inicio);
+        // Ruta GET para obtener las aerolíneas
+        app.get('/airlines', controller.getAirlines);
 
-    // Ruta GET para obtener las aerolíneas
-    app.get('/airlines', controller.getAirlines);
+        // Ruta GET para obtener los aeropuertos con aeropuerto de origen y destino
+        app.get('/airports', controller.getAirports);
 
-    // Ruta GET para obtener los aeropuertos
-    app.get('/airports', controller.getAirports);
-    
-    // Ruta GET para obtener los vuelos
-    //app.get('/flights', controller.getFlights);
+        // Ruta GET para obtener los vuelos con el aeropuerto de origen y de destino
+        app.get('/flightsORDE', controller.getFlightsORDE);        
 
-    app.get('/flights', controller.getFlightsBy);
+        // Ruta GET para obtener los vuelos con distintos atributos
+        app.get('/flightsBy', controller.getFlightsBy);
 
+        // Ruta GET para obtener información de un vuelo con su número
+        app.get('/flightsByNumber', controller.getFlightByNumber);
+
+        // Ruta GET para obtener un saludo
+        app.get('/mensaje-hola', controller.getHola);
+
+    } catch (error) {
+        console.error('Error al iniciar la aplicación:', error);
+    }
 }
 
 main();
